Fixed Javadoc plugin cfg (develop branch)